made a bunch of changes to roster and photos pages, fixed footers on other pages, fixed spacing

--- a/Roster.css
+++ b/Roster.css
@@ -75,12 +75,14 @@ nav ul li a:hover{
     color:rgb(228, 238, 255);
 }
 
-h1 {
+.rosterTitle {
     text-align: center;
-    font-family: roboto;
+    font-family: roboto mono;
     color:  #262B53;
-    padding: 15px; 
+    align-self: center; 
+    margin: .7em 0;
 }
+
 
 h2 {
     text-align: center;
@@ -89,14 +91,19 @@ h2 {
     font-size: medium;
 }
 
-.row {
-    padding: 20px;
+
+.cardBackground {
+    background-color: white;
+    margin: 3em;
+    padding: 0 1em 1em;
+    border: #7498D1;
+    border-style: solid;
+    box-shadow: 5px 5px 20px #7498D1;
 }
 
-.cardWidth {
-    margin: 1em;
+.card-title {
+    font-weight: lighter;
 }
-
 .site-footer {
     background-color:  #7498D1;
 }
