--- a/photos.css
+++ b/photos.css
@@ -74,30 +74,42 @@ nav ul li a:hover{
 
 .fas:hover {
     color:rgb(228, 238, 255);
+
+}
+
+.cardBackground {
+    background-color: white;
+    margin: 3em;
+    padding: 0 1em 1em;
+    border: #7498D1;
+    border-style: solid;
+    box-shadow: 5px 5px 20px #7498D1;
 }
 
 .card {
     margin: 1em 0;
     padding: 0;
+    border: none;
 }
 
 .cardHolder {
     margin: 0;
     padding: 0;
+    height: 250px;
+    width: 250px;
 }
 
-.cardWidth {
-    margin: 1em;
-}
 .pic {
     width: 100%;
+
 }
 
 .photoTitle {
     text-align: center;
-    font-family: roboto;
+    font-family: roboto mono;
     color:  #262B53;
-    padding: 30px 0 0; 
+    align-self: center; 
+    margin: .7em 0;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
